--- a/todo.txt
+++ b/todo.txt
@@ -1,13 +1,9 @@
 #TODO
+[ ] add more phrases
+[ ] add more keywords
+[ ] parse multiple keywords
+[ ] add funny stuff
+[ ] improve readme file
+[ ] organize code
+[ ] add change log to update data
 
-add more phrases
-
-add more keywords
-
-parse multiple keywords
-
-add funny stuff
-
-improve readme file
-
-organize code
